handle update icon title of notes
